Add 1.8-1.12 support, optimize XMaterial usage, fix minor bugs